--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -42,13 +42,14 @@
         grid-template-columns: repeat(3, 1fr);
         justify-content: center;
         gap: 18px;
+        padding-bottom: 25px;
         padding-left: 5px;
         padding-right: 5px;
         scale: 0.6;
         flex-basis: content;
         flex-wrap: wrap;
         margin: 0 auto;
-        margin-top: 130px;
+        margin-top: 80px;
         max-width: 1200px;
     }
 
@@ -105,7 +106,7 @@
     }
 
     footer {
-        padding-top: 40px;
+        padding-top: 0;
 
     }
 
@@ -125,6 +126,10 @@
         padding-top: 5px;
     }
 
+    .gammer {
+        margin-top: 40px;
+    }
+
     .footer-row,
     .footer-icon {
         display: grid;
@@ -141,7 +146,9 @@
     }
 
     .play-section {
-        margin-top: 0px;
+
+        padding-top: 50px;
+        margin-top: 50px
     }
 
     .nav-right {
@@ -193,7 +200,7 @@
     }
 
     .game-cetagorry {
-        padding-bottom: 25px;
+        padding-bottom: 0;
         padding-top: 8px;
     }
 
@@ -225,5 +232,11 @@
     .unleash {
         font-size: 20px;
     }
+
+    .footer-container {
+        margin-top: 0;
+    }
+
+
 
 }
